# CarPricePredictionModel

./: .gitignore  LICENSE  notebook.ipynb  pyproject.toml
