[tool.poetry]
name = "carpricepredictionmodel"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.1"
keras = "^2.11.0"
seaborn = "^0.12.2"
python-dotenv = "^1.0.0"
numpy = "1.23.5"
missingno = "^0.5.2"
category-encoders = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools==65.6.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

